--- a/index.html
+++ b/index.html
@@ -43,10 +43,9 @@
     <div>
         <h1 class="tit" id="ARKFUTURE-NET">ARKFUTURE-NET</h1>
         <div>
-            <h2 id="ws">网站 | WEB site</h2>
+            <h2 id="ws">资源库及知识库 | RL&Repo&ResRep</h2>
             <ul>
-                <li><a href="https://arkfuture.github.io/">镜像站 GITHUB [ARKFUTURE]</a></li>
-                <li><a href="https://arkfuture.gitlab.io/">镜像站 GITLAB [ARKFUTURE]</a></li>
+                <li><a href="">待填加</a></li>
             </ul>
         </div>
         <br>
