--- a/index.html
+++ b/index.html
@@ -165,13 +165,15 @@ Thanks:
 ARKFUTURE team/group/studio and Friends
 INSPIRCD https://www.inspircd.org/
 XiehJ https://hwkj.top/
-In the same way, I would like to thank my dearest Ms. Zhang..
+In the same way, I would like to thank my dearest Ms.Zhang..
+
 <a href="mailto:pbp9wdep2@mozmail.com">发邮件给我</a>
+
+C-HK ST-Kowloon L-Kowloon O-ARKFUTURE OU-IT&SOC CN-ARKFUTURE
 -->
 
 <!--
 Date: 2025/4/29
 ToDo:
 The configuration files of ergoircd and inspircd are always kept up to date. √
-
 -->
