--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@ In the same way, I would like to thank my dearest Ms.Zhang..
 
 <a href="mailto:pbp9wdep2@mozmail.com">发邮件给我</a>
 
-C-HK ST-Kowloon L-Kowloon O-ARKFUTURE OU-IT&SOC CN-ARKFUTURE
+C-HK ST-HongKong L-Kowloon O-ARKFUTURE OU-IT&SOC CN-ARKFUTURE
 -->
 
 <!--
