--- a/ARKFUTURE/HTML/fl.html
+++ b/ARKFUTURE/HTML/fl.html
@@ -82,7 +82,7 @@
 <p>软件包搜索</p>
     <form method="GET" action="https://repology.org/projects/" target="_blank">
         <input type="text" name="search" size="30" autocomplete="off" placeholder="Linux发行版软件包搜索"><br>
-        <input type="text" name="inrepo" size="30" autocomplete="off" placeholder="查找系统,参数 如:debian_13"><br>
+        <input type="text" name="inrepo" size="30" autocomplete="off" placeholder="查找系统,参数 如:debian_13">
         <input type="submit" value="搜索"><i><--点击</i>
     </form>
     <br>
