--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 <!-- body -->
 
 <body>
+    <a href="index_en.html">En</a>
     <div style="text-align: center;">
         <h1 class="LM" id="LM">ARKFUTURE</h1>
     </div>
