--- a/index_en.html
+++ b/index_en.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!-- update 2024/11/28 -->
-<html lang="zh" xml:lang="zh">
+<html lang="en" xml:lang="en">
 
 <!-- head -->
 
@@ -23,12 +23,12 @@
     </div>
 
     <div>
-        <h1 class="tit">关于 | About</h1>
+        <h1 class="tit">About</h1>
         <div>
-            <h2>公约 | CONVENTION</h2>
-            <p>您需阅读我们的<a href="/ARKFUTURE/MD/arkfuture.md" width="%" height="150" frameborder="0">公约</a>及<a href="/ARKFUTURE/MD/warrant-canary.md" width="100%" height="150" frameborder="0">Warrant Canary</a>以了解我们</p>
-            <p>这不是一堆法律术语,但它们是关于什么是允许的指导方针</p>
-            <p>也欢迎加入我们的聊天室进行交流讨论</p>
+            <h2>Convention</h2>
+            <p>Please read our <a href="/ARKFUTURE/MD/arkfuture.md" width="%" height="150" frameborder="0">Convention</a> and <a href="/ARKFUTURE/MD/warrant-canary.md" width="100%" height="150" frameborder="0">Warrant Canary</a> to understand our principles</p>
+            <p>While not legal jargon, these guidelines outline what is permissible</p>
+            <p>You are welcome to join our chat rooms for discussion</p>
             <ul>
                 <li><a href="https://t.me/arkfuture_studio2">Telegram: arkfuture_studio2</a></li>
                 <li><a href="#irc">IRC: #arkfuture_studio</a></li>
@@ -43,48 +43,48 @@
     <div>
         <h1 class="tit" id="ARKFUTURE-NET">ARKFUTURE-NET</h1>
         <div>
-            <h2 id="ws">资源库及知识库 | RL&Repo&ResRep</h2>
+            <h2 id="ws">Resource Library & Knowledge Repository</h2>
             <ul>
-                <li><a href="">待填加</a></li>
+                <li><a href="">To be added</a></li>
             </ul>
         </div>
         <br>
         <div>
-            <h2 id="irc">IRC服务 | IRC</h2>
-            <p>默认端口:[noSSL:6667/SSL:6697]<br>备用端口:[noSSL:6668,6669/SSL:9999]</p>
+            <h2 id="irc">IRC Services</h2>
+            <p>Default Ports:[noSSL:6667/SSL:6697]<br>Alternate Ports:[noSSL:6668,6669/SSL:9999]</p>
             <ul>
                 <li><a href="irc://IRC.DOMAN:6667" id="irc-link"><strong>noSSL</strong></a></li>
                 <li><a href="ircs://IRC.DOMAN:6697" id="irc-link"><strong>SSL</strong></a></li>
                 <li><a href="/webirc" id="irc-link"><strong>WebIRC</strong></a></li>
             </ul>
-            <p>* 进入后请仔细阅读motd *</p>
-            <p>同时也请您查看并审查我们的相关服务器配置文件,给我们提出好的匿名及安全的意见和建议</p>
+            <p>* Please carefully read the MOTD after connecting *</p>
+            <p>Please review our server configurations and provide feedback on anonymity and security improvements</p>
             <br>
             <div>
-                <h2 id="pv">代理 | PROXY & VPN</h2>
-                <p>VPN使用SoftEtherVPN</p>
-                <p>SOCKS5和HTTP的Mixed服务(代理), 端口:[5554]</p>
-                <p>我们假设我们的代理(proxy)服务器是:192.168.0.2, 那么配置文件是:</p>
+                <h2 id="pv">Proxy & VPN Services</h2>
+                <p>VPN uses SoftEtherVPN</p>
+                <p>Mixed SOCKS5 and HTTP proxy services, port:[5554]</p>
+                <p>Assuming our proxy server is: 192.168.0.2, the configuration file is:</p>
                 <ul>
-                    <li><a href="/ARKFUTURE/RES/proxy.pac">PAC代理配置示例文件 [proxy.pac]</a></li>
+                    <li><a href="/ARKFUTURE/RES/proxy.pac">Sample Proxy Configuration File [proxy.pac]</a></li>
                 </ul>
             </div>
             <br>
             <div>
-                <h2>订阅源 | RSS/FEED/ATOM</h2>
+                <h2>RSS/FEED/ATOM Subscriptions</h2>
                 <ul>
-                    <li><a href="/ARKFUTURE/RES/news.opml">新闻订阅源 [news.opml]</a></li>
-                    <li><a href="/ARKFUTURE/RES/cs.opml">网络空间安全订阅源 [cs.opml]</a></li>
-                    <li><a href="/ARKFUTURE/RES/dm.opml">动漫订阅源 [dm.opml]</a></li>
+                    <li><a href="/ARKFUTURE/RES/news.opml">News Feeds [news.opml]</a></li>
+                    <li><a href="/ARKFUTURE/RES/cs.opml">Cybersecurity Feeds [cs.opml]</a></li>
+                    <li><a href="/ARKFUTURE/RES/dm.opml">Anime Feeds [dm.opml]</a></li>
                 </ul>
             </div>
             <br>
             <div>
-                <h2>小组件 | Plugins</h2>
+                <h2>Plugins & Widgets</h2>
                 <ul>
-                    <li><a href="/ARKFUTURE/HTML/fl.html" style="border: none; width: 100%; max-width: 400px; height: auto; margin: 20px 0 0; display: block;" title="快速链接">快速搜索</a></li>
-                    <li><a href="/ARKFUTURE/HTML/link.html" style="border: none; width: 100%; max-width: 400px; height: auto; margin: 20px 0 0; display: block;" title="Link">常用链接</a></li>
-                    <li><a href="/ARKFUTURE/HTML/conf.html" style="border: none; width: 100%; max-width: 400px; height: auto; margin: 20px 0 0; display: block;" title="Link">配置文件连接</a></li>
+                    <li><a href="/ARKFUTURE/HTML/fl.html" style="border: none; width: 100%; max-width: 400px; height: auto; margin: 20px 0 0; display: block;" title="Quick Links">Quick Search</a></li>
+                    <li><a href="/ARKFUTURE/HTML/link.html" style="border: none; width: 100%; max-width: 400px; height: auto; margin: 20px 0 0; display: block;" title="Link">Common Links</a></li>
+                    <li><a href="/ARKFUTURE/HTML/conf.html" style="border: none; width: 100%; max-width: 400px; height: auto; margin: 20px 0 0; display: block;" title="Link">Configuration Links</a></li>
                     <li><iframe src="/ARKFUTURE/HTML/zj.html" style="border: none; width: 100%; max-width: 400px; height: auto; margin: 20px 0 0; display: block;" title="Embedded Widget"></iframe></li>
                 </ul>
             </div>
@@ -95,9 +95,9 @@
         <hr>
 
         <div>
-            <h1 class="tit" id="so">社会的 | Social</h1>
+            <h1 class="tit" id="so">Social Media</h1>
             <ul>
-                <p>订阅我们的社交平台</p>
+                <p>Follow us on social media</p>
                 <li><a href="https://x.com/arkfuturestudio">X</a></li>
                 <li><a href="https://www.facebook.com/ARKFUTURE">FACEBOOK</a></li>
                 <li><a href="https://infosec.exchange/@arkfuture">Mastodon</a></li>
@@ -108,44 +108,44 @@
         <hr>
 
         <div>
-            <h1 class="tit" id="li">许可证 | Licenses</h1>
+            <h1 class="tit" id="li">Licenses</h1>
             <ul>
-                <li><a href="https://www.gnu.org/licenses/">GNU开源许可</a></li>
-                <li><a href="https://creativecommons.org/licenses/">CC知识许可</a></li>
-                <li><a href="https://www.apache.org/licenses/">Apache开源许可</a></li>
-                <li><a href="https://www.mozilla.org/en-US/MPL/">MPL开源许可</a></li>
+                <li><a href="https://www.gnu.org/licenses/">GNU Licenses</a></li>
+                <li><a href="https://creativecommons.org/licenses/">Creative Commons Licenses</a></li>
+                <li><a href="https://www.apache.org/licenses/">Apache Licenses</a></li>
+                <li><a href="https://www.mozilla.org/en-US/MPL/">Mozilla Public License</a></li>
             </ul>
-            <p>除了以上许可证,其他许可证我们也在使用, 因为篇幅, 我们不再写其他的了</p>
+            <p>In addition to the above, we use other licenses as well, which are not listed here due to space constraints</p>
         </div>
 
         <br>
         <hr>
 
         <div>
-            <h1 class="tit">结束语 | END</h1>
+            <h1 class="tit">Closing Remarks</h1>
 
-            <p>我们崇尚黑客精神</p>
+            <p>We embrace the hacker spirit</p>
             <blockquote>
-                <p>黑客精神(Hacker)，这个词是用来形容那些热衷于解决问题、克服限制的人。</p>
+                <p>The term 'Hacker' describes those who are passionate about solving problems and overcoming limitations.</p>
 
-                <p>"任何职业都可以成为黑客。你可以是一个木匠黑客。不一定是高科技。只要与技能有关，并且倾心专注于你正在做的事情，你就可能成为黑客。"</p>
+                <p>"Anyone can be a hacker in their profession. You could be a carpenter hacker. It's not necessarily about high technology. As long as it involves skill and you're deeply focused on what you're doing, you can be a hacker."</p>
 
-                <cite>引自《黑客伦理与信息时代精神》</cite>
+                <cite>Source: "Hackers: Heroes of the Computer Revolution"</cite>
             </blockquote>
             <br>
-            <p>我们也崇尚GNU精神, 相信开放可以共同进步</p>
-            <p>我们倡导终身学习----不断积累可以让自己的人生变得丰富,不管工作与否</p>
-            <p>INGO(国际非政府组织)&INPO(国际非营利组织)&GNU|OS(gnu精神|开源共创)&CL(持续学习)</p>
-            <p>我们是一群追寻自己梦想的人</p>
+            <p>We also advocate the GNU philosophy, believing that openness leads to collective progress</p>
+            <p>We promote lifelong learning—continuous accumulation of knowledge enriches life, regardless of professional context</p>
+            <p>INGO (International Non-Governmental Organization) & INPO (International Non-Profit Organization) & GNU|OS (GNU Philosophy | Open Source Co-creation) & CL (Continuous Learning)</p>
+            <p>We are a group of individuals pursuing our dreams</p>
             <br>
-            <p>团队所使用的系统:{<br>红蓝对抗:Parrotsec,Kali,blackarch;<br>隐私:Tails,Qubes;<br>OSINT开源情报及恶意软件分析:tsurugi-linux,REMnux,tracelabs.org,sherlock-linux<br>}</p>
+            <p>Systems utilized by our team:{<br>Red Team vs Blue Team: Parrotsec, Kali, blackarch;<br>Privacy: Tails, Qubes;<br>OSINT & Malware Analysis: tsurugi-linux, REMnux, tracelabs.org, sherlock-linux<br>}</p>
 
         </div>
 
 </body>
 <br>
 
-<!-- ARKFUTURE 标准 footer -->
+<!-- ARKFUTURE Standard Footer -->
 <footer>
     <div style="text-align: center;">
         <p>Copyright © 2020-∞ <a href="">ARKFUTURE</a> | <a href="">ARKFUTURE STUDIO(GROUP)</a> | <a href="">ARK SRCURITY LAB</a>. All rights reserved.</p>
@@ -168,7 +168,7 @@ In the same way, I would like to thank my dearest Ms.Zhang..
 <!--
 Date: 2025/4/29
 List: 
-<a href="mailto:pbp9wdep2@mozmail.com">发邮件给我</a>
+<a href="mailto:pbp9wdep2@mozmail.com">Email me</a>
 C-HK ST-HongKong L-Kowloon O-ARKFUTURE OU-IT&SOC CN-ARKFUTURE
 http://user:password@www.example.com:80/path/index.html?arg=value#anchor
 -->
