--- a/index_en.html
+++ b/index_en.html
@@ -18,6 +18,7 @@
 <!-- body -->
 
 <body>
+    <a href="index.html">中文</a>
     <div style="text-align: center;">
         <h1 class="LM" id="LM">ARKFUTURE</h1>
     </div>
