--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 
 
 </html>
-
+<a href="mailto:arkfuture@i2pmail.org">发邮件给我</a>
 <!--
 Thanks:
 ARKFUTURE team/group/studio and Friends
@@ -170,7 +170,6 @@ In the same way, I would like to thank my dearest Ms.Zhang..
 <!--
 Date: 2025/4/29
 List: 
-<a href="mailto:pbp9wdep2@mozmail.com">发邮件给我</a>
 C-HK ST-HongKong L-Kowloon O-ARKFUTURE OU-IT&SOC CN-ARKFUTURE
 http://user:password@www.example.com:80/path/index.html?arg=value#anchor
 -->
