--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta http-equiv="Pragma" content="no-cache">
     <meta http-equiv="Expires" content="0">
     <!--<link rel="stylesheet" type="text/css" href="/css.css">-->
-    <script src="/js.js"  defer></script>
+    <script src="/js.js" defer></script>
 </head>
 
 <!-- body -->
@@ -136,11 +136,15 @@
             <br>
             <p>我们也崇尚GNU精神, 相信开放可以共同进步</p>
             <p>我们倡导终身学习----不断积累可以让自己的人生变得丰富,不管工作与否</p>
-            <p>INGO(国际非政府组织)&INPO(国际非营利组织)&GNU|OS(gnu精神|开源共创)&CL(持续学习)</p>
             <p>我们是一群追寻自己梦想的人</p>
+            <p>INGO(国际非政府组织)&INPO(国际非营利组织)&GNU|OS(gnu精神|开源共创)&CL(持续学习)</p>
             <br>
-            <p>团队所使用的系统:{<br>红蓝对抗:Parrotsec,Kali,blackarch;<br>隐私:Tails,Qubes;<br>OSINT开源情报及恶意软件分析:tsurugi-linux,REMnux,tracelabs.org,sherlock-linux<br>}</p>
-
+            <p>团队所使用的系统:{
+                <br>测试:Parrotsec,Kali;
+                <br>隐私:Tails,Qubes;
+                <br>OSINT&取证&软件分析:tsurugi,REMnux,tracelabs,sherlock,caine;
+                <br>运维&系统备份:clonezilla,rescuezilla;}
+            </p>
         </div>
 
 </body>
