--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
             <p>我们也崇尚GNU精神, 相信开放可以共同进步</p>
             <p>我们倡导终身学习----不断积累可以让自己的人生变得丰富,不管工作与否</p>
             <p>我们是一群追寻自己梦想的人</p>
-            <p>INGO(国际非政府组织)&INPO(国际非营利组织)&GNU|OS(gnu精神|开源共创)&CL(持续学习)</p>
+            <p>INGO(国际非政府组织)&INPO(国际非营利组织)&OS-GNU(开源共创及GNU精神)&CL(持续学习)</p>
             <br>
             <p>团队所使用的系统:{
                 <br>测试:Parrotsec,Kali;
