--- a/index_en.html
+++ b/index_en.html
@@ -99,6 +99,7 @@
             <h1 class="tit" id="so">Social Media</h1>
             <ul>
                 <p>Follow us on social media</p>
+                <li><a href="https://gravatar.com/arkfuturestudio">Gravatar(Link Tree)</a></li>
                 <li><a href="https://x.com/arkfuturestudio">X</a></li>
                 <li><a href="https://www.facebook.com/ARKFUTURE">FACEBOOK</a></li>
                 <li><a href="https://infosec.exchange/@arkfuture">Mastodon</a></li>
