--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
             <p>这不是一堆法律术语,但它们是关于什么是允许的指导方针</p>
             <p>也欢迎加入我们的聊天室进行交流讨论</p>
             <ul>
+                <li><a href="mailto:arkfuture@i2pmail.org">Email: arkfuture</a></li>
                 <li><a href="https://t.me/arkfuture_studio2">Telegram: arkfuture_studio2</a></li>
                 <li><a href="#irc">IRC: #arkfuture_studio</a></li>
                 <li><a href="ircs://irc.libera.chat/#arkfuture_studio">LiberaChat: #arkfuture_studio</a></li>
@@ -99,6 +100,7 @@
             <h1 class="tit" id="so">社会的 | Social</h1>
             <ul>
                 <p>订阅我们的社交平台</p>
+                <li><a href="https://cn.gravatar.com/arkfuturesec">Gravatar(Link Tree)</a></li>
                 <li><a href="https://x.com/arkfuturestudio">X</a></li>
                 <li><a href="https://www.facebook.com/ARKFUTURE">FACEBOOK</a></li>
                 <li><a href="https://infosec.exchange/@arkfuture">Mastodon</a></li>
@@ -162,7 +164,7 @@
 
 
 </html>
-<a href="mailto:arkfuture@i2pmail.org">发邮件给我</a>
+
 <!--
 Thanks:
 ARKFUTURE team/group/studio and Friends
