--- a/index_en.html
+++ b/index_en.html
@@ -31,6 +31,7 @@
             <p>While not legal jargon, these guidelines outline what is permissible</p>
             <p>You are welcome to join our chat rooms for discussion</p>
             <ul>
+                <li><a href="mailto:arkfuture@i2pmail.org">Email: arkfuture</a></li>
                 <li><a href="https://t.me/arkfuture_studio2">Telegram: arkfuture_studio2</a></li>
                 <li><a href="#irc">IRC: #arkfuture_studio</a></li>
                 <li><a href="ircs://irc.libera.chat/#arkfuture_studio">LiberaChat: #arkfuture_studio</a></li>
