--- a/index.html
+++ b/index.html
@@ -31,7 +31,6 @@
             <p>这不是一堆法律术语,但它们是关于什么是允许的指导方针</p>
             <p>也欢迎加入我们的聊天室进行交流讨论</p>
             <ul>
-                <li><a href="mailto:arkfuture@i2pmail.org">Email: arkfuture</a></li>
                 <li><a href="https://t.me/arkfuture_studio2">Telegram: arkfuture_studio2</a></li>
                 <li><a href="#irc">IRC: #arkfuture_studio</a></li>
                 <li><a href="ircs://irc.libera.chat/#arkfuture_studio">LiberaChat: #arkfuture_studio</a></li>
@@ -53,14 +52,13 @@
         <br>
         <div>
             <h2 id="irc">IRC服务 | IRC</h2>
-            <p>默认端口:[noSSL:6667/SSL:6697]<br>备用端口:[noSSL:6668,6669/SSL:9999]</p>
+            <p>要在拥有 TLS/SSL 的情况下进行连接 请使用端口 6697 </p>
+            <p>要在没有 TLS/SSL 的情况下进行连接 请使用端口 6667-6669</p>
+            <p>以链接的形式:</p>
             <ul>
-                <li><a href="irc://IRC.DOMAN:6667" id="irc-link"><strong>noSSL</strong></a></li>
                 <li><a href="ircs://IRC.DOMAN:6697" id="irc-link"><strong>SSL</strong></a></li>
-                <li><a href="/webirc" id="irc-link"><strong>WebIRC</strong></a></li>
+                <li><a href="irc://IRC.DOMAN:6667" id="irc-link"><strong>noSSL</strong></a></li>
             </ul>
-            <p>* 进入后请仔细阅读motd *</p>
-            <p>同时也请您查看并审查我们的相关服务器配置文件,给我们提出好的匿名及安全的意见和建议</p>
             <br>
             <div>
                 <h2 id="pv">代理 | PROXY & VPN</h2>
