--- a/ARKFUTURE/HTML/conf.html
+++ b/ARKFUTURE/HTML/conf.html
@@ -20,7 +20,7 @@
         <p>请单机下载</p>
 
         <div>
-            <h2>名称 支持的版本</h2>
+            <h2>名称 支持的软件版本</h2>
             <a href="../CONFIG/i2pd/i2pd.conf">i2pd Latest</a><br>
             <a href="../CONFIG/inspircd/README.md">inspircd Latest</a><br>
             <a href="../CONFIG/ergoircd/ircd.yaml">ergoircd Latest</a><br>
@@ -28,6 +28,8 @@
             <a href="../CONFIG/other/irssi.conf">irssi Latest</a><br>
             <a href="../CONFIG/minecraft/server.properties">minecraftServer Latest</a>
         </div>
+
+        <h2>同时也请您查看并审查我们的相关服务器配置文件,给我们提出好的匿名及安全的意见和建议</h2>
 
     </div>
 </body>
