--- a/index.html
+++ b/index.html
@@ -59,6 +59,8 @@
                 <li><a href="ircs://IRC.DOMAN:6697" id="irc-link"><strong>SSL</strong></a></li>
                 <li><a href="irc://IRC.DOMAN:6667" id="irc-link"><strong>noSSL</strong></a></li>
             </ul>
+            <p>关于IRC相关的知识 您可以了解: https://netsplit.de/ 和 https://www.geekshed.net</p>
+            <p>我们为什么要使用IRC: 因为它快速 实时 独立服务器 易扩展 等优点, 是一个老牌的稳定协议</p>
             <br>
             <div>
                 <h2 id="pv">代理 | PROXY & VPN</h2>
@@ -74,7 +76,7 @@
                 <h2>订阅源 | RSS/FEED/ATOM</h2>
                 <ul>
                     <li><a href="/ARKFUTURE/RES/news.opml">新闻订阅源 [news.opml]</a></li>
-                    <li><a href="/ARKFUTURE/RES/cs.opml">网络空间安全订阅源 [cs.opml]</a></li>
+                    <li><a href="/ARKFUTURE/RES/cs.opml">网络安全情报订阅源 [cs.opml]</a></li>
                     <li><a href="/ARKFUTURE/RES/dm.opml">动漫订阅源 [dm.opml]</a></li>
                 </ul>
             </div>
