--- a/index_en.html
+++ b/index_en.html
@@ -12,7 +12,7 @@
     <meta http-equiv="Pragma" content="no-cache">
     <meta http-equiv="Expires" content="0">
     <!--<link rel="stylesheet" type="text/css" href="/css.css">-->
-    <script src="/js.js"  defer></script>
+    <script src="/js.js" defer></script>
 </head>
 
 <!-- body -->
@@ -26,10 +26,10 @@
     <div>
         <h1 class="tit">About</h1>
         <div>
-            <h2>Convention</h2>
-            <p>Please read our <a href="/ARKFUTURE/MD/arkfuture.md" width="%" height="150" frameborder="0">Convention</a> and <a href="/ARKFUTURE/MD/warrant-canary.md" width="100%" height="150" frameborder="0">Warrant Canary</a> to understand our principles</p>
-            <p>While not legal jargon, these guidelines outline what is permissible</p>
-            <p>You are welcome to join our chat rooms for discussion</p>
+            <h2>CONVENTION</h2>
+            <p>Please read our <a href="/ARKFUTURE/MD/arkfuture.md" width="%" height="150" frameborder="0">Convention</a> and <a href="/ARKFUTURE/MD/warrant-canary.md" width="100%" height="150" frameborder="0">Warrant Canary</a> to understand us</p>
+            <p>These are not legal terms, but guidelines about what is permitted</p>
+            <p>You are also welcome to join our chat rooms for discussion</p>
             <ul>
                 <li><a href="https://t.me/arkfuture_studio2">Telegram: arkfuture_studio2</a></li>
                 <li><a href="#irc">IRC: #arkfuture_studio</a></li>
@@ -44,7 +44,7 @@
     <div>
         <h1 class="tit" id="ARKFUTURE-NET">ARKFUTURE-NET</h1>
         <div>
-            <h2 id="ws">Resource Library & Knowledge Repository</h2>
+            <h2 id="ws">Resource Library</h2>
             <ul>
                 <li><a href="">To be added</a></li>
             </ul>
@@ -52,40 +52,41 @@
         <br>
         <div>
             <h2 id="irc">IRC Services</h2>
-            <p>Default Ports:[noSSL:6667/SSL:6697]<br>Alternate Ports:[noSSL:6668,6669/SSL:9999]</p>
+            <p>To connect with TLS/SSL, use port 6697</p>
+            <p>To connect without TLS/SSL, use ports 6667-6669</p>
+            <p>Connection links:</p>
             <ul>
-                <li><a href="irc://IRC.DOMAN:6667" id="irc-link"><strong>noSSL</strong></a></li>
                 <li><a href="ircs://IRC.DOMAN:6697" id="irc-link"><strong>SSL</strong></a></li>
-                <li><a href="/webirc" id="irc-link"><strong>WebIRC</strong></a></li>
+                <li><a href="irc://IRC.DOMAN:6667" id="irc-link"><strong>noSSL</strong></a></li>
             </ul>
-            <p>* Please carefully read the MOTD after connecting *</p>
-            <p>Please review our server configurations and provide feedback on anonymity and security improvements</p>
+            <p>For IRC-related knowledge, you can learn about: https://netsplit.de/ and https://www.geekshed.net</p>
+            <p>Why we use IRC: Because of its speed, real-time nature, independent server, easy scalability, and other advantages. It is a well-established and stable protocol.</p>
             <br>
             <div>
-                <h2 id="pv">Proxy & VPN Services</h2>
+                <h2 id="pv">Proxy & VPN</h2>
                 <p>VPN uses SoftEtherVPN</p>
-                <p>Mixed SOCKS5 and HTTP proxy services, port:[5554]</p>
+                <p>SOCKS5 and HTTP Mixed service (proxy), port:[5554]</p>
                 <p>Assuming our proxy server is: 192.168.0.2, the configuration file is:</p>
                 <ul>
-                    <li><a href="/ARKFUTURE/RES/proxy.pac">Sample Proxy Configuration File [proxy.pac]</a></li>
+                    <li><a href="/ARKFUTURE/RES/proxy.pac">PAC proxy configuration sample file [proxy.pac]</a></li>
                 </ul>
             </div>
             <br>
             <div>
-                <h2>RSS/FEED/ATOM Subscriptions</h2>
+                <h2>RSS/FEED/ATOM</h2>
                 <ul>
-                    <li><a href="/ARKFUTURE/RES/news.opml">News Feeds [news.opml]</a></li>
-                    <li><a href="/ARKFUTURE/RES/cs.opml">Cybersecurity Feeds [cs.opml]</a></li>
-                    <li><a href="/ARKFUTURE/RES/dm.opml">Anime Feeds [dm.opml]</a></li>
+                    <li><a href="/ARKFUTURE/RES/news.opml">News subscription sources [news.opml]</a></li>
+                    <li><a href="/ARKFUTURE/RES/cs.opml">Cybersecurity intelligence subscription sources [cs.opml]</a></li>
+                    <li><a href="/ARKFUTURE/RES/dm.opml">Anime subscription sources [dm.opml]</a></li>
                 </ul>
             </div>
             <br>
             <div>
-                <h2>Plugins & Widgets</h2>
+                <h2>Widgets</h2>
                 <ul>
                     <li><a href="/ARKFUTURE/HTML/fl.html" style="border: none; width: 100%; max-width: 400px; height: auto; margin: 20px 0 0; display: block;" title="Quick Links">Quick Search</a></li>
                     <li><a href="/ARKFUTURE/HTML/link.html" style="border: none; width: 100%; max-width: 400px; height: auto; margin: 20px 0 0; display: block;" title="Link">Common Links</a></li>
-                    <li><a href="/ARKFUTURE/HTML/conf.html" style="border: none; width: 100%; max-width: 400px; height: auto; margin: 20px 0 0; display: block;" title="Link">Configuration Links</a></li>
+                    <li><a href="/ARKFUTURE/HTML/conf.html" style="border: none; width: 100%; max-width: 400px; height: auto; margin: 20px 0 0; display: block;" title="Link">Configuration File Links</a></li>
                     <li><iframe src="/ARKFUTURE/HTML/zj.html" style="border: none; width: 100%; max-width: 400px; height: auto; margin: 20px 0 0; display: block;" title="Embedded Widget"></iframe></li>
                 </ul>
             </div>
@@ -96,10 +97,10 @@
         <hr>
 
         <div>
-            <h1 class="tit" id="so">Social Media</h1>
+            <h1 class="tit" id="so">Social</h1>
             <ul>
-                <p>Follow us on social media</p>
-                <li><a href="https://gravatar.com/arkfuturesec">Gravatar(Link Tree)</a></li>
+                <p>Subscribe to our social platforms</p>
+                <li><a href="https://cn.gravatar.com/arkfuturesec">Gravatar(Link Tree)</a></li>
                 <li><a href="https://x.com/arkfuturestudio">X</a></li>
                 <li><a href="https://www.facebook.com/ARKFUTURE">FACEBOOK</a></li>
                 <li><a href="https://infosec.exchange/@arkfuture">Mastodon</a></li>
@@ -112,44 +113,49 @@
         <div>
             <h1 class="tit" id="li">Licenses</h1>
             <ul>
-                <li><a href="https://www.gnu.org/licenses/">GNU Licenses</a></li>
-                <li><a href="https://creativecommons.org/licenses/">Creative Commons Licenses</a></li>
-                <li><a href="https://www.apache.org/licenses/">Apache Licenses</a></li>
-                <li><a href="https://www.mozilla.org/en-US/MPL/">Mozilla Public License</a></li>
+                <li><a href="https://www.gnu.org/licenses/">GNU Open Source Licenses</a></li>
+                <li><a href="https://creativecommons.org/licenses/">CC Knowledge Licenses</a></li>
+                <li><a href="https://www.apache.org/licenses/">Apache Open Source Licenses</a></li>
+                <li><a href="https://www.mozilla.org/en-US/MPL/">MPL Open Source Licenses</a></li>
             </ul>
-            <p>In addition to the above, we use other licenses as well, which are not listed here due to space constraints</p>
+            <p>Besides the above licenses, we also use other licenses, but due to space limitations, we won't list them all here</p>
         </div>
 
         <br>
         <hr>
 
         <div>
-            <h1 class="tit">Closing Remarks</h1>
+            <h1 class="tit">Conclusion | END</h1>
 
             <p>We embrace the hacker spirit</p>
             <blockquote>
-                <p>The term 'Hacker' describes those who are passionate about solving problems and overcoming limitations.</p>
+                <p>The hacker spirit (Hacker) is a term used to describe those who are passionate about solving problems and overcoming limitations.</p>
 
-                <p>"Anyone can be a hacker in their profession. You could be a carpenter hacker. It's not necessarily about high technology. As long as it involves skill and you're deeply focused on what you're doing, you can be a hacker."</p>
+                <p>"Anyone can be a hacker in any profession. You could be a carpenter hacker. It's not necessarily high-tech. As long as it involves skill and you're deeply focused on what you're doing, you could become a hacker."</p>
 
-                <cite>Source: "Hackers: Heroes of the Computer Revolution"</cite>
+                <cite>From "The Hacker Ethic and the Spirit of the Information Age"</cite>
             </blockquote>
             <br>
-            <p>We also advocate the GNU philosophy, believing that openness leads to collective progress</p>
-            <p>We promote lifelong learning—continuous accumulation of knowledge enriches life, regardless of professional context</p>
-            <p>INGO (International Non-Governmental Organization) & INPO (International Non-Profit Organization) & GNU|OS (GNU Philosophy | Open Source Co-creation) & CL (Continuous Learning)</p>
-            <p>We are a group of individuals pursuing our dreams</p>
+            <p>We also embrace the GNU spirit, believing that openness can lead to collective progress</p>
+            <p>We advocate lifelong learning—continuous accumulation can enrich one's life, whether for work or not</p>
+            <p>We are a group of people pursuing our dreams</p>
+            <p>INGO(International Non-Governmental Organization)&INPO(International Non-Profit Organization)&OS-GNU(Open Source Co-creation and GNU Spirit)&CL(Continuous Learning)</p>
             <br>
-            <p>Systems utilized by our team:{<br>Red Team vs Blue Team: Parrotsec, Kali, blackarch;<br>Privacy: Tails, Qubes;<br>OSINT & Malware Analysis: tsurugi-linux, REMnux, tracelabs.org, sherlock-linux<br>}</p>
-
+            <p>Systems used by our team:{
+                <br>Testing:Parrotsec,Kali;
+                <br>Privacy:Tails,Qubes;
+                <br>OSINT&Forensics&Software Analysis:tsurugi,REMnux,tracelabs,sherlock,caine;
+                <br>Operations&System Backup:clonezilla,rescuezilla;}
+            </p>
         </div>
 
 </body>
 <br>
 
-<!-- ARKFUTURE Standard Footer -->
+<!-- ARKFUTURE Standard footer -->
 <footer>
     <div style="text-align: center;">
+        <p>Ark Future | Ark Future Studio(Group) | Ark Security Lab</p>
         <p>Copyright © 2020-∞ <a href="">ARKFUTURE</a> | <a href="">ARKFUTURE STUDIO(GROUP)</a> | <a href="">ARK SRCURITY LAB</a>. All rights reserved.</p>
         <p>All trademarks and resources are the property of their respective owners.</p>
         <p>----ALL by ARKFUTURE Management and Operation Working Group</p>
@@ -158,7 +164,7 @@
 
 
 </html>
-<a href="mailto:arkfuture@i2pmail.org">Email me</a>
+
 <!--
 Thanks:
 ARKFUTURE team/group/studio and Friends
