--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             </div>
             <br>
             <div>
-                <h2>小组件 | Plugins</h2>
+                <h2>小组件 | Widgets</h2>
                 <ul>
                     <li><a href="/ARKFUTURE/HTML/fl.html" style="border: none; width: 100%; max-width: 400px; height: auto; margin: 20px 0 0; display: block;" title="快速链接">快速搜索</a></li>
                     <li><a href="/ARKFUTURE/HTML/link.html" style="border: none; width: 100%; max-width: 400px; height: auto; margin: 20px 0 0; display: block;" title="Link">常用链接</a></li>
