--- a/ARKFUTURE/HTML/conf.html
+++ b/ARKFUTURE/HTML/conf.html
@@ -21,9 +21,9 @@
 
         <div>
             <h2>名称 支持的软件版本</h2>
-            <a href="../CONFIG/i2pd/i2pd.conf">i2pd Latest</a><br>
+            <a href="../CONFIG/i2p-tor/i2pd.conf">i2pd Latest</a><br>
             <a href="../CONFIG/inspircd/README.md">inspircd Latest</a><br>
-            <a href="../CONFIG/ergoircd/ircd.yaml">ergoircd Latest</a><br>
+            <a href="../CONFIG/other/ircd.yaml">ergoircd Latest</a><br>
             <a href="../CONFIG/suricata/suricata.yaml">Suricata Latest</a><br>
             <a href="../CONFIG/other/irssi.conf">irssi Latest</a><br>
             <a href="../CONFIG/minecraft/server.properties">minecraftServer Latest</a>
