--- a/ARKFUTURE/HTML/conf.html
+++ b/ARKFUTURE/HTML/conf.html
@@ -23,10 +23,10 @@
             <h2>名称 支持的软件版本</h2>
             <a href="../CONFIG/i2p-tor/i2pd.conf">i2pd Latest</a><br>
             <a href="../CONFIG/inspircd/README.md">inspircd Latest</a><br>
-            <a href="../CONFIG/other/ircd.yaml">ergoircd Latest</a><br>
             <a href="../CONFIG/suricata/suricata.yaml">Suricata Latest</a><br>
             <a href="../CONFIG/other/irssi.conf">irssi Latest</a><br>
             <a href="../CONFIG/minecraft/server.properties">minecraftServer Latest</a>
+            <a href="../CONFIG/other/README.md">other conf</a><br>
         </div>
 
         <h2>同时也请您查看并审查我们的相关服务器配置文件,给我们提出好的匿名及安全的意见和建议</h2>
