--- a/ARKFUTURE/HTML/conf.html
+++ b/ARKFUTURE/HTML/conf.html
@@ -21,11 +21,15 @@
 
         <div>
             <h2>名称 支持的软件版本</h2>
-            <a href="../CONFIG/i2p-tor/i2pd.conf">i2pd Latest</a><br>
-            <a href="../CONFIG/inspircd/README.md">inspircd Latest</a><br>
-            <a href="../CONFIG/suricata/suricata.yaml">Suricata Latest</a><br>
-            <a href="../CONFIG/other/irssi.conf">irssi Latest</a><br>
-            <a href="../CONFIG/minecraft/server.properties">minecraftServer Latest</a>
+            <a href="../CONFIG/i2p-tor/i2pd.conf">i2pd Latest !</a><br>
+            <a href="../CONFIG/i2p-tor/torrc">tor Latest</a><br>
+            <a href="../CONFIG/inspircd/README.md">inspircd Latest !</a><br>
+            <a href="../CONFIG/ergoircd/ircd.yaml">ergoircd Latest</a><br>
+            <a href="../CONFIG/hybridircd/ircd.conf">hybridircd Latest</a><br>
+            <a href="../CONFIG/ngircd/ngircd.conf">ngircd Latest</a><br>
+            <a href="../CONFIG/irssi/irssi.conf">irssi Latest !</a><br>
+            <a href="../CONFIG/suricata/suricata.yaml">Suricata Latest !</a><br>
+            <a href="../CONFIG/minecraft/server.properties">minecraftServer Latest !</a>
             <a href="../CONFIG/other/README.md">other conf</a><br>
         </div>
 
