--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 <li><a href="irc://IRC.DOMAN:6667" id="irc-link"><strong>noSSL</strong></a></li>
             </ul>
             <p>关于IRC相关的知识 您可以了解: https://netsplit.de/ 和 https://www.geekshed.net</p>
-            <p>我们为什么要使用IRC: 因为它快速 实时 独立服务器 易扩展 等优点, 是一个老牌的稳定协议</p>
+            <p>我们为什么要使用IRC: 因为它快速 实时 独立服务器 易扩展 等优点, 是一个稳定的老牌协议</p>
             <br>
             <div>
                 <h2 id="pv">代理 | PROXY & VPN</h2>
