--- a/ARKFUTURE/HTML/conf.html
+++ b/ARKFUTURE/HTML/conf.html
@@ -29,7 +29,7 @@
             <a href="../CONFIG/ngircd/ngircd.conf">ngircd Latest</a><br>
             <a href="../CONFIG/irssi/irssi.conf">irssi Latest !</a><br>
             <a href="../CONFIG/suricata/suricata.yaml">Suricata Latest !</a><br>
-            <a href="../CONFIG/minecraft/server.properties">minecraftServer Latest !</a>
+            <a href="../CONFIG/minecraft/server.properties">minecraftServer Latest !</a><br>
             <a href="../CONFIG/other/README.md">other conf</a><br>
         </div>
 
