--- a/ARKFUTURE/HTML/fl.html
+++ b/ARKFUTURE/HTML/fl.html
@@ -66,15 +66,40 @@
     </form>
     <br>
 
-<p>xdcc搜索</p>
+<p>XDCC搜索</p>
     <form method="GET" action="https://www.xdcc.eu/search.php" target="_blank">
         <input type="text" name="searchkey" size="30" autocomplete="off" placeholder="xdcc.eu 搜索">
+        <input type="submit" value="搜索"><i><--点击</i>
+    </form>
+    <br>
+    <form method="GET" action="https://nibl.co.uk/search" target="_blank">
+        <input type="text" name="query" size="30" autocomplete="off" placeholder="NIBL 搜索"><br>
+        <input type="submit" value="搜索"><i><--点击</i>
+    </form>
+    <br>
+    <form method="GET" action="https://xdcc.animk.info/" target="_blank">
+        <input type="text" name="search" size="30" autocomplete="off" placeholder="animk 搜索"><br>
+        <input type="submit" value="搜索"><i><--点击</i>
+    </form>
+    <br>
+    <form method="GET" action="https://lib.rs/search" target="_blank">
+        <input type="text" name="q" size="30" autocomplete="off" placeholder="lib.rs 搜索"><br>
         <input type="submit" value="搜索"><i><--点击</i>
     </form>
     <br>
     <form method="GET" action="https://sunxdcc.com/deliver.php" target="_blank">
         <input type="text" name="sterm" size="30" autocomplete="off" placeholder="sunxdcc 搜索 元数据"><br>
         <input type="text" name="page" size="30" autocomplete="off" placeholder="页数">
+        <input type="submit" value="搜索"><i><--点击</i>
+    </form>
+    <br>
+    <form method="GET" action="https://skullxdcc.com/" target="_blank">
+        <input type="text" name="" size="30" autocomplete="off" placeholder="skull 搜索"><br>
+        <input type="submit" value="搜索"><i><--点击</i>
+    </form>
+    <br>
+    <form method="GET" action="https://www.xdcc.rocks/" target="_blank">
+        <input type="text" name="" size="30" autocomplete="off" placeholder="xdcc.rocks 搜索"><br>
         <input type="submit" value="搜索"><i><--点击</i>
     </form>
     <br>
@@ -110,32 +135,6 @@
     </form>
     <br>
 
-<h2>资产测绘平台(所有的都需要登录)</h2>
-    <form method="GET" action="https://www.cve.org/CVERecord/SearchResults" target="_blank">
-        <input type="text" name="query" size="30" autocomplete="off" placeholder="通用漏洞披露/CVE">
-        <input type="submit" value="搜索"><i><--点击</i>
-    </form>
-    <br>
-    <form method="GET" action="https://x.threatbook.com/v5/generalSearch" target="_blank">
-        <input type="text" name="q" size="30" autocomplete="off" placeholder="微步在线">
-        <input type="submit" value="搜索"><i><--点击</i>
-    </form>
-    <br>
-    <form method="GET" action="https://quake.360.net/quake/#/searchResult" target="_blank">
-        <input type="text" name="searchVal" size="30" autocomplete="off" placeholder="360夸克">
-        <input type="submit" value="搜索"><i><--点击</i>
-    </form>
-    <br>
-    <form method="GET" action="https://www.shodan.io/search" target="_blank">
-        <input type="text" name="query" size="30" autocomplete="off" placeholder="SouDan">
-        <input type="submit" value="搜索"><i><--点击</i>
-    </form>
-    <br>
-    <form method="GET" action="https://www.onyphe.io/search" target="_blank">
-        <input type="text" name="q" size="30" autocomplete="off" placeholder="Onyphe">
-        <input type="submit" value="搜索"><i><--点击</i>
-    </form>
-    <br>
 
 <h2>视频逃逸</h2>
     <form method="GET" action="https://jx.xmflv.com/" target="_blank">
