--- a/ARKFUTURE/HTML/fl.html
+++ b/ARKFUTURE/HTML/fl.html
@@ -73,17 +73,17 @@
     </form>
     <br>
     <form method="GET" action="https://nibl.co.uk/search" target="_blank">
-        <input type="text" name="query" size="30" autocomplete="off" placeholder="NIBL 搜索"><br>
+        <input type="text" name="query" size="30" autocomplete="off" placeholder="NIBL 搜索">
         <input type="submit" value="搜索"><i><--点击</i>
     </form>
     <br>
     <form method="GET" action="https://xdcc.animk.info/" target="_blank">
-        <input type="text" name="search" size="30" autocomplete="off" placeholder="animk 搜索"><br>
+        <input type="text" name="search" size="30" autocomplete="off" placeholder="animk 搜索">
         <input type="submit" value="搜索"><i><--点击</i>
     </form>
     <br>
     <form method="GET" action="https://lib.rs/search" target="_blank">
-        <input type="text" name="q" size="30" autocomplete="off" placeholder="lib.rs 搜索"><br>
+        <input type="text" name="q" size="30" autocomplete="off" placeholder="lib.rs 搜索">
         <input type="submit" value="搜索"><i><--点击</i>
     </form>
     <br>
@@ -94,12 +94,12 @@
     </form>
     <br>
     <form method="GET" action="https://skullxdcc.com/" target="_blank">
-        <input type="text" name="" size="30" autocomplete="off" placeholder="skull 搜索"><br>
+        <input type="text" name="" size="30" autocomplete="off" placeholder="skull 搜索">
         <input type="submit" value="搜索"><i><--点击</i>
     </form>
     <br>
     <form method="GET" action="https://www.xdcc.rocks/" target="_blank">
-        <input type="text" name="" size="30" autocomplete="off" placeholder="xdcc.rocks 搜索"><br>
+        <input type="text" name="" size="30" autocomplete="off" placeholder="xdcc.rocks 搜索">
         <input type="submit" value="搜索"><i><--点击</i>
     </form>
     <br>
