--- a/ARKFUTURE/HTML/fl.html
+++ b/ARKFUTURE/HTML/fl.html
@@ -171,13 +171,13 @@
     <br>
 
 <h2>电台搜索,使用radio-browser.info</h2>
-    <form method="GET" action="http://at1.api.radio-browser.info/xml/stations/search"_blank">
+    <form method="GET" action="http://fi1.api.radio-browser.info/xml/stations/search"_blank">
         <input type="text" name="name" size="30" autocomplete="off" placeholder="电台名字搜索"><br>
         <input type="text" name="order" size="30" autocomplete="off" placeholder="混沌搜索(搜啥都行)">
         <input type="submit" value="搜索"><i><--点击</i>
     </form>
 
-    <form method="GET" action="http://at1.api.radio-browser.info/xml/stations/byuuid "_blank">
+    <form method="GET" action="http://fi1.api.radio-browser.info/xml/stations/byuuid "_blank">
         <input type="text" name="uuids" size="30" autocomplete="off" placeholder="uuid搜索">
         <input type="submit" value="搜索"><i><--点击</i>
     </form>
