--- a/ARKFUTURE/HTML/conf.html
+++ b/ARKFUTURE/HTML/conf.html
@@ -20,17 +20,16 @@
         <p>请单机下载</p>
 
         <div>
-            <h2>名称 支持的软件版本</h2>
-            <a href="../CONFIG/i2p-tor/i2pd.conf">i2pd Latest !</a><br>
-            <a href="../CONFIG/i2p-tor/torrc">tor Latest</a><br>
-            <a href="../CONFIG/inspircd/README.md">inspircd Latest !</a><br>
-            <a href="../CONFIG/ergoircd/ircd.yaml">ergoircd Latest</a><br>
-            <a href="../CONFIG/hybridircd/ircd.conf">hybridircd Latest</a><br>
-            <a href="../CONFIG/ngircd/ngircd.conf">ngircd Latest</a><br>
-            <a href="../CONFIG/irssi/irssi.conf">irssi Latest !</a><br>
-            <a href="../CONFIG/suricata/suricata.yaml">Suricata Latest !</a><br>
-            <a href="../CONFIG/minecraft/server.properties">minecraftServer Latest !</a><br>
-            <a href="../CONFIG/other/README.md">other conf</a><br>
+            <h2>名称 支持的软件版本, 以 "!" 结尾的软件版本适配[Debian 稳定版]软件包最新版本</h2>
+            <a href="https://github.com/ARKFUTURE/ARKFUTURE.github.io/tree/main/ARKFUTURE/CONFIG/i2p-tor/">i2pd & tor !</a><br>
+            <a href="https://github.com/ARKFUTURE/ARKFUTURE.github.io/tree/main/ARKFUTURE/CONFIG/inspircd/README.md">inspircd !</a><br>
+            <a href="https://github.com/ARKFUTURE/ARKFUTURE.github.io/tree/main/ARKFUTURE/CONFIG/ergoircd/">ergoircd</a><br>
+            <a href="https://github.com/ARKFUTURE/ARKFUTURE.github.io/tree/main/ARKFUTURE/CONFIG/hybridircd/">hybridircd !</a><br>
+            <a href="https://github.com/ARKFUTURE/ARKFUTURE.github.io/tree/main/ARKFUTURE/CONFIG/ngircd/">ngircd [配置归档中,待软件包更新后解除]</a><br>
+            <a href="https://github.com/ARKFUTURE/ARKFUTURE.github.io/tree/main/ARKFUTURE/CONFIG/irssi/">irssi !</a><br>
+            <a href="https://github.com/ARKFUTURE/ARKFUTURE.github.io/tree/main/ARKFUTURE/CONFIG/suricata/">Suricata !</a><br>
+            <a href="https://github.com/ARKFUTURE/ARKFUTURE.github.io/tree/main/ARKFUTURE/CONFIG/minecraft/">minecraftServer !</a><br>
+            <a href="https://github.com/ARKFUTURE/ARKFUTURE.github.io/tree/main/ARKFUTURE/CONFIG/other/README.md">other conf</a><br>
         </div>
 
         <h2>同时也请您查看并审查我们的相关服务器配置文件,给我们提出好的匿名及安全的意见和建议</h2>
