--- a/ARKFUTURE/HTML/zj.html
+++ b/ARKFUTURE/HTML/zj.html
@@ -17,6 +17,12 @@
         <img src="https://www.hamqsl.com/solar101vhfper.php">
         <img src="https://www.hamqsl.com/solar101vhfpic.php">
         <img src="https://www.hamqsl.com/solarmuf.php">
+        <img src="https://www.hamqsl.com/solarsun.php">
+        <img src="https://www.hamqsl.com/solarglobe.php">
+        <img src="https://www.hamqsl.com/solarsystem.php">
+        <img src="https://www.hamqsl.com/solargraph.php">
+        <img src="https://www.hamqsl.com/marston.php">
+        <img src="https://www.hamqsl.com/solarmuf.php">
     </div>
 </body>
 </html>
