--- a/index.html
+++ b/index.html
@@ -174,8 +174,12 @@ In the same way, I would like to thank my dearest Ms.Zhang..
 -->
 
 <!--
-Date: 2025/4/29
-List: 
+Announcement:
+All of our services and configuration files will be migrated to Debian 13 on August 9, 2025.
+-->
+
+<!--
+Memo:
 C-HK ST-HongKong L-Kowloon O-ARKFUTURE OU-IT&SOC CN-ARKFUTURE
 http://user:password@www.example.com:80/path/index.html?arg=value#anchor
 xspnn7m8
