--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <h1 class="tit">关于 | About</h1>
         <div>
             <h2>公约 | CONVENTION</h2>
-            <p>您需阅读我们的<a href="/ARKFUTURE/MD/arkfuture.md" width="%" height="150" frameborder="0">公约</a>及<a href="/ARKFUTURE/MD/warrant-canary.md" width="100%" height="150" frameborder="0">Warrant Canary</a>以了解我们</p>
+            <p>您需阅读我们的<a href="/arkfuture/md/arkfuture.md" width="%" height="150" frameborder="0">公约</a>及<a href="/arkfuture/md/warrant-canary.md" width="100%" height="150" frameborder="0">Warrant Canary</a>以了解我们</p>
             <p>这不是一堆法律术语,但它们是关于什么是允许的指导方针</p>
             <p>也欢迎加入我们的聊天室进行交流讨论</p>
             <ul>
@@ -68,26 +68,26 @@
                 <p>SOCKS5和HTTP的Mixed服务(代理), 端口:[5554]</p>
                 <p>我们假设我们的代理(proxy)服务器是:192.168.0.2, 那么配置文件是:</p>
                 <ul>
-                    <li><a href="/ARKFUTURE/RES/proxy.pac">PAC代理配置示例文件 [proxy.pac]</a></li>
+                    <li><a href="/arkfuture/res/proxy.pac">PAC代理配置示例文件 [proxy.pac]</a></li>
                 </ul>
             </div>
             <br>
             <div>
                 <h2>订阅源 | RSS/FEED/ATOM</h2>
                 <ul>
-                    <li><a href="/ARKFUTURE/RES/news.opml">新闻订阅源 [news.opml]</a></li>
-                    <li><a href="/ARKFUTURE/RES/cs.opml">网络安全情报订阅源 [cs.opml]</a></li>
-                    <li><a href="/ARKFUTURE/RES/dm.opml">动漫订阅源 [dm.opml]</a></li>
+                    <li><a href="/arkfuture/res/news.opml">新闻订阅源 [news.opml]</a></li>
+                    <li><a href="/arkfuture/res/cs.opml">网络安全情报订阅源 [cs.opml]</a></li>
+                    <li><a href="/arkfuture/res/dm.opml">动漫订阅源 [dm.opml]</a></li>
                 </ul>
             </div>
             <br>
             <div>
                 <h2>小组件 | Widgets</h2>
                 <ul>
-                    <li><a href="/ARKFUTURE/HTML/fl.html" style="border: none; width: 100%; max-width: 400px; height: auto; margin: 20px 0 0; display: block;" title="快速链接">快速搜索</a></li>
-                    <li><a href="/ARKFUTURE/HTML/link.html" style="border: none; width: 100%; max-width: 400px; height: auto; margin: 20px 0 0; display: block;" title="Link">常用链接</a></li>
-                    <li><a href="/ARKFUTURE/HTML/conf.html" style="border: none; width: 100%; max-width: 400px; height: auto; margin: 20px 0 0; display: block;" title="Link">配置文件连接</a></li>
-                    <li><iframe src="/ARKFUTURE/HTML/zj.html" style="border: none; width: 100%; max-width: 400px; height: auto; margin: 20px 0 0; display: block;" title="Embedded Widget"></iframe></li>
+                    <li><a href="/arkfuture/html/fl.html" style="border: none; width: 100%; max-width: 400px; height: auto; margin: 20px 0 0; display: block;" title="快速链接">快速搜索</a></li>
+                    <li><a href="/arkfuture/html/link.html" style="border: none; width: 100%; max-width: 400px; height: auto; margin: 20px 0 0; display: block;" title="Link">常用链接</a></li>
+                    <li><a href="/arkfuture/html/conf.html" style="border: none; width: 100%; max-width: 400px; height: auto; margin: 20px 0 0; display: block;" title="Link">配置文件连接</a></li>
+                    <li><iframe src="/arkfuture/html/zj.html" style="border: none; width: 100%; max-width: 400px; height: auto; margin: 20px 0 0; display: block;" title="Embedded Widget"></iframe></li>
                 </ul>
             </div>
             <br>
