--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <div>
             <h2 id="ws">资源库及知识库 | RL&Repo&ResRep</h2>
             <ul>
-                <li><a href="">待填加</a></li>
+                <li><a href="">Gitea</a></li>
             </ul>
         </div>
         <br>
@@ -60,15 +60,13 @@
                 <li><a href="irc://IRC.DOMAN:6667" id="irc-link"><strong>noSSL</strong></a></li>
             </ul>
             <p>关于IRC相关的知识 您可以了解: https://netsplit.de/ 和 https://www.geekshed.net</p>
-            <p>我们为什么要使用IRC: 因为它快速 实时 独立服务器 易扩展 等优点, 是一个稳定的老牌协议</p>
+            <p>我们为什么要使用IRC: 因为它快速 轻量 独立服务器 易扩展 等优点, 是一个稳定的协议</p>
             <br>
             <div>
                 <h2 id="pv">代理 | PROXY & VPN</h2>
                 <p>VPN使用SoftEtherVPN</p>
                 <p>SOCKS5和HTTP的Mixed服务(代理), 端口:[5554]</p>
-                <p>我们假设我们的代理(proxy)服务器是:192.168.0.2, 那么配置文件是:</p>
                 <ul>
-                    <li><a href="/arkfuture/res/proxy.pac">PAC代理配置示例文件 [proxy.pac]</a></li>
                 </ul>
             </div>
             <br>
@@ -97,9 +95,9 @@
         <hr>
 
         <div>
-            <h1 class="tit" id="so">社会的 | Social</h1>
+            <h1 class="tit" id="so">社交 | Social</h1>
             <ul>
-                <p>订阅我们的社交平台</p>
+                <p>订阅我们的社交平台账号</p>
                 <li><a href="https://cn.gravatar.com/arkfuturesec">Gravatar(Link Tree)</a></li>
                 <li><a href="https://x.com/arkfuturestudio">X</a></li>
                 <li><a href="https://www.facebook.com/ARKFUTURE">FACEBOOK</a></li>
